Updated the webcontent build to omit a lot of cruft in the copies. Changes to address BPS-306 on the viz layout, making it a proper window within the main layout. Added support for the Workspace submenu when the viz view is up. Additional style changes to address issues of footer layout across the various pages (side-effects of the Viz view rework). Cleaned up the viz template (almost no functional change - just readability)

--- a/webcontent/src/main/resources/style/sna2.css
+++ b/webcontent/src/main/resources/style/sna2.css
@@ -1,16 +1,43 @@
   
-body {
-      color: #333;
-      font-size: 14px;
-      font-family: Lato, sans-serif;
-    }
-    #graph-container {
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      position: absolute;
-    }
+#contentContainer{
+	width:100%;
+	height:100%;
+}
+
+
+#content{
+	width:100%;
+	height:100%;
+	max-width:100vw;
+	max-height:100vw;
+	margin:0px;
+	padding:0px;
+}
+
+#subNavBar{
+	margin-left:50px;
+}
+
+
+#vizcontainer {
+	position:relative;
+	width:100%;
+	height:100%;
+	min-width:60vw;
+	min-height:60vw;
+	color: #333;
+	font-size: 14px;
+	font-family: Lato, sans-serif;
+}
+#graph-container {
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width:100%;
+	height:100%;
+	position: absolute;
+}
     /* Control panel: */
 .control-panel {
   color: #666;
@@ -53,7 +80,6 @@ body {
 }
     #data-pane {
       top: 10px;
-      /*bottom: 10px;*/
       left: 10px;
       position: absolute;
       width: 230px;
@@ -62,7 +88,6 @@ body {
     }
     #graph-pane {
       bottom: 10px;
-      /*bottom: 10px;*/
       left: 10px;
       position: absolute;
       width: 230px;
@@ -76,7 +101,6 @@ body {
     }
     #control-pane {
       top: 10px;
-      /*bottom: 10px;*/
       right: 10px;
       position: absolute;
       width: 230px;
